--- a/src/pages/Wordle.scss
+++ b/src/pages/Wordle.scss
@@ -1,6 +1,10 @@
 
 .wordle{
     display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    gap: 1rem;
 
     .board{
         display: flex;
@@ -15,5 +19,11 @@
         justify-content: center;
         align-items: center;
         gap: .25rem;
+    }
+
+    .Toastify__toast-container--top-center {
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
     }
 }
