--- a/src/components/Tile/Tile.css
+++ b/src/components/Tile/Tile.css
@@ -4,6 +4,7 @@
   padding: 4px;
   border-radius: 4px;
   border: 2px solid #484848;
+  transition: background-color 0.5s ease-in;
   display: inline-flex;
   justify-content: center;
   align-items: center;
