--- a/src/components/Tile/Tile.scss
+++ b/src/components/Tile/Tile.scss
@@ -6,6 +6,8 @@
     padding: 4px;
     border-radius: 4px;
     border: 2px solid #484848;
+    transition: background-color .5s ease-in;
+
 
     display: inline-flex;
     justify-content: center;
