--- a/src/components/Tile/Tile.css
+++ b/src/components/Tile/Tile.css
@@ -11,6 +11,8 @@
 }
 .tile.hasLetter {
   border-color: grey;
+  animation: scaleUpDown 0.05s linear alternate;
+  animation-iteration-count: 2;
 }
 .tile.hit {
   background-color: #4cb050;
@@ -24,5 +26,13 @@ hit?: boolean;//for if the letter is in the right position
     miss?: boolean;//for if the letter is not in the word
     inWord?: boolean;//for if the letter is in the word but wrong position
  */
+@keyframes scaleUpDown {
+  0% {
+    transform: scale(1);
+  }
+  100% {
+    transform: scale(1.2);
+  }
+}
 
 /*# sourceMappingURL=Tile.css.map */
