--- a/src/components/Tile/Tile.scss
+++ b/src/components/Tile/Tile.scss
@@ -15,6 +15,8 @@
 
     &.hasLetter{
         border-color: grey;
+        animation: scaleUpDown .05s linear alternate;
+        animation-iteration-count: 2;
     }
 
     &.hit{
@@ -37,3 +39,13 @@ hit?: boolean;//for if the letter is in the right position
     miss?: boolean;//for if the letter is not in the word
     inWord?: boolean;//for if the letter is in the word but wrong position
  */
+
+@keyframes scaleUpDown {
+    0%{
+        transform: scale(1);
+    }
+    100%{
+        transform: scale(1.2);
+    }
+
+}
